[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Lobby/LobbyWaiting.tscn" type="PackedScene" id=3]
[ext_resource path="res://Lobby/Lobby.theme" type="Theme" id=4]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 16.0
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 132.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 272.0
margin_right = 752.0
margin_bottom = 112.0
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 156.0
margin_bottom = 21.0
text = "Name:"
align = 2

[node name="NameBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 26.0
rect_min_size = Vector2( 320, 0 )
text = "Player"
align = 1

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 35.0
margin_right = 156.0
margin_bottom = 51.0
text = "IP:"
align = 2

[node name="IPBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 160.0
margin_top = 30.0
margin_right = 480.0
margin_bottom = 56.0
rect_min_size = Vector2( 320, 0 )
text = "127.0.0.1"
align = 1

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 65.0
margin_right = 156.0
margin_bottom = 81.0
text = "Port:"
align = 2

[node name="PortBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 160.0
margin_top = 60.0
margin_right = 480.0
margin_bottom = 86.0
rect_min_size = Vector2( 320, 0 )
text = "1928"
align = 1

[node name="HostButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 90.0
margin_right = 156.0
margin_bottom = 112.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 160.0
margin_top = 90.0
margin_right = 480.0
margin_bottom = 112.0
text = "Join Game"

[node name="WaitingRoom" parent="." instance=ExtResource( 1 )]

[node name="LobbyWaiting" parent="." instance=ExtResource( 3 )]

[node name="Aaa" type="AcceptDialog" parent="."]
margin_right = 144.0
margin_bottom = 62.0
dialog_text = "ERROR 040 - Player already found

Please choose a different name"
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="confirmed" from="Aaa" to="." method="_on_AcceptDialog_confirmed"]
